Fix for ConcurrentModificationException